--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Luis Playlist</h1>
         <div id="form">
-            <p>Add a new song:</p>
+            <p id="add">Add a new song:</p>
             <input placeholder="Song Name" id="song">
             <input placeholder="Artist Name" id="artist">
             <input placeholder="Song Length" id="length">
