--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="css/style.css" />
     </head>
 
-    <body>
+    <body id="backgroundimg">
         <h1>Luis Playlist</h1>
         <div id="form">
             <p id="add">Add a new song:</p>
@@ -17,7 +17,7 @@
             <input placeholder="Song Length" id="length">
             <input placeholder="Image URL" id="image">
             <input placeholder="Song Link Address" id="link">
-            <button id="add">Add</button>
+            <button>Add</button>
         </div>
         <div id="cart">
             <!--<div class="column" id="images">-->
